Disabled file logging (because out of memory exception)